# mini-searcher

./: .env.example  Cargo.toml  LICENSE.md  README.md
src/: indexer.rs  main.rs  utils.rs
