[package]
name = "indexer"
version = "0.1.0"
authors = ["Huy Tran <kingbazoka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = "0.10.6"
boyer-moore-magiclen = "0.2.8"
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde       = "1.0"
serde_json  = "1.0"
env_logger  = "0.6"
tokio = "0.2.21"
dotenv = "0.15.0"
